Fix spacing

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ button {
     padding-right: 12px;
     transition: color 0.5s;
     outline: none!important;
+    margin: 3.2px;
 }
 
 button:hover {
@@ -46,7 +47,7 @@ model-viewer {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) translateY(200px);
+    transform: translate(-50%, -50%) translateY(144px);
     width: 100%;
 }
 
